* Dev - Updated Groups_User to provide expected return type Groups_Capability[] instead of string[] when asking for capabilities_deep.
* Dev - API improvement, added additional getters and setters to cache object, added key type checks.
* Dev - Revised and fixed several code formatting issues.
* Dev - Fixed instances of incorrect code documentation.
* Dev - Validation hints for verified property access (empty.variable).
* Dev - Validation hints for verified property access (property.notFound).

2025-04-20 - version 3.5.0
* Update - WordPress 6.8 compatible.
* Update - Requires at least WordPress 6.3.
* Update - Updated recommendations.
* Update - Updated description.
* Dev - Codesmetics.

2025-01-22 - version 3.4.2
* Dev - Removed unnecessary translation function calls.
* Dev - Revised some instances of missing output escaping.
* Dev - Added missing translators: comments.
* Dev - Replaced deprecated null parameter.
* Dev - Validation hints.
* Dev - Removed return type declaration for two actions.
* Fix - Fixed missing return value for a widget_categories_args filter.
* Fix - Fixed missing return value for a widget_categories_dropdown_args filter.
* Fix - Fixed optional return value declaration.
* Update - Updated the translation template.
* Update - Updated the included translations.

2024-12-29 - version 3.4.1
* Update - Declare WooCommerce HPOS compatibility.

2024-12-26 - version 3.4.0
* Update - WordPress 6.7 compatible.
* Dev - Security validation WordPress.DB.PreparedSQL.InterpolatedNotPrepared
* Dev - Security validation WordPress.Security.EscapeOutput.OutputNotEscaped
* Dev - Security validation WordPress.DB.PreparedSQL.NotPrepared
* Dev - Security validation audit.php.wp.security.sqli.input-in-sinks
* Dev - Security validation scanner.php.wp.security.rest-route.permission-callback.incorrect-return
* Dev - Security validation audit.php.wp.security.sqli.shortcode-attr
* Dev - Security validation audit.php.wp.security.xss.shortcode-attr