@@ -24,12 +24,12 @@ if ( !defined( 'ABSPATH' ) ) {
 }
 
 /**
- * @var string options form nonce name
+ * @var string GROUPS_ADMIN_OPTIONS_NONCE options form nonce name
  */
 define( 'GROUPS_ADMIN_OPTIONS_NONCE', 'groups-admin-nonce' );
 
 /**
- * @var int 14 days in seconds
+ * @var int GROUPS_SHOW_EXTENSIONS_BOX_INTERVAL 14 days in seconds
  */
 define( 'GROUPS_SHOW_EXTENSIONS_BOX_INTERVAL', 1209600 );
 
@@ -68,6 +68,7 @@ function groups_admin_options() {
 
 			$post_types = get_post_types();
 			$selected_post_types = !empty( $_POST['add_meta_boxes'] ) && is_array( $_POST['add_meta_boxes'] ) ? $_POST['add_meta_boxes'] : array(); // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+			$handle_post_types = array();
 			foreach( $post_types as $post_type ) {
 				$handle_post_types[$post_type] = in_array( $post_type, $selected_post_types );
 			}
